@@ -56,8 +56,11 @@ BUG FIXES
     o	When qr() used pivoting, the coefficient names in qr.coef() were
 	not pivoted to match.  (PR#9623)
 
-    o	UseMethod() could crash R if the first argument as not a
+    o	UseMethod() could crash R if the first argument was not a
 	character string.
+
+    o	R and Rscript on Unix-alikes were not accepting spaces in -e
+	arguments (even if quoted).
 
 
 
